--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "vue-bulma-tabs",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@crow1796/vue-bulma-tabs",
+  "version": "1.0.0",
+  "main": "./dist/vue-bulma-tabs.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-bundle": "vue-cli-service build --target lib --name vue-bulma-tabs ./src/main.js",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
@@ -22,6 +23,14 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
-  }
+  },
+  "files": [
+    "dist/*",
+    "src/*",
+    "*.json",
+    "*.js"
+  ]
 }
